# NovelReaderNative

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: CharsetDetector.h  NovelData.h  TextTools.h  U16Decoder.h  UnicodeConverter.h  XwTools.h
app/src/main/cpp/jni/: NativeHelper.cpp  NovelDataHelper.cpp
app/src/main/cpp/source/: CharsetDetector.cpp  NovelData.cpp  TextTools.cpp  U16Decoder.cpp  UnicodeConverter.cpp  XwTools.cpp
app/src/main/java/com/dengtao/novelreadernative/: MainActivity.kt
app/src/main/java/com/dengtao/novelreadernative/jni/: NativeHelper.kt  NovelDataHelper.kt
app/src/main/java/com/dengtao/novelreadernative/model/: ChapterTitle.kt
app/src/main/java/com/dengtao/novelreadernative/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/dengtao/novelreadernative/view/: MainPage.kt
app/src/main/java/com/dengtao/novelreadernative/viewmodel/: MainPageViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
